--- a/thesis-app/src/index.html
+++ b/thesis-app/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="https://maxcdn.icons8.com/Share/icon/Healthcare//scissors1600.png">
 </head>
 <body>
   <app-root>Loading...</app-root>
