Add stripe server route, service and importing
TODO: import UiModule and move checkout to its own component

--- a/thesis-app/src/index.html
+++ b/thesis-app/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://maxcdn.icons8.com/Share/icon/Healthcare//scissors1600.png">
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
