--- a/thesis-app/src/index.html
+++ b/thesis-app/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="icon" href="https://maxcdn.icons8.com/Share/icon/Healthcare//scissors1600.png">
   <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
