--- a/thesis-app/src/index.html
+++ b/thesis-app/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="https://maxcdn.icons8.com/Share/icon/Healthcare//scissors1600.png">
   <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
-<body style="background-color: black">
+<body>
   <app-root>Loading...</app-root>
 </body>
 </html>
